Add new controller and UseCase("project")

--- a/IS_Project.Web/appsettings.Development.json
+++ b/IS_Project.Web/appsettings.Development.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "DatabaseConnections": {
+    "IS_DbConnection": "<IS_DbConnection>"
+  },
+  "AllowedHosts": "*"
 }
